--- a/Client/src/components/Profile/User/User.css
+++ b/Client/src/components/Profile/User/User.css
@@ -1,8 +1,10 @@
 .User {
   margin: 0;
-  padding: 0;
+  padding-top: 10px;
   box-sizing: border-box;
   list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 body {
@@ -10,10 +12,10 @@ body {
 }
 
 .wrapper {
-  position: absolute;
-  top: 50%;
+  /* position: absolute; */
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   width: 75%;
   display: flex;
   flex-flow: row;
