--- a/Client/src/containers/Auth/Login/Login.css
+++ b/Client/src/containers/Auth/Login/Login.css
@@ -55,13 +55,14 @@
 .link a {
   color: lightskyblue;
   height: 100%;
-  margin-bottom: 5px;
-  margin-right: 8px;
+  /* margin-bottom: 5px;
+  margin-right: 8px; */
   padding: 0px;
   text-decoration: none;
-  border-bottom: 4px solid transparent;
+  /* border-bottom: 4px solid transparent; */
   display: block;
   box-sizing: border-box;
+  font-size: 15px;
 }
 .Button {
   position: relative;
