--- a/Client/src/containers/Auth/Login/Login.css
+++ b/Client/src/containers/Auth/Login/Login.css
@@ -15,22 +15,23 @@
   background: #ffffff;
   max-width: 360px;
   margin: 0 auto 100px;
-  padding: 10px 10px;
+  padding: 30px;
   text-align: center;
   /* position: absolute; */
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 .Form input {
   outline: 0;
-  background: #f2f2f2;
-  width: 80%;
+  /* background: #f2f2f2; */
   border: 0;
-  margin-left: 29px;
-  margin-bottom: 6px;
-  padding: 12px;
+  /* margin-left: 29px; */
+  /* margin-bottom: 6px; */
+  padding: 20px;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 18px;
+  font-family: "Open Sans";
 }
+
 .Form h2 {
   color: rgba(8, 18, 168, 0.932);
   font-style: inherit;
@@ -69,7 +70,7 @@
   text-align: right;
 }
 .left {
-  margin-left: 5px;
+  /* margin-left: 5px; */
   position: relative;
   text-align: left;
 }
